# Backend

./: .gitignore  README.md  pyproject.toml
app/: main.py  router.py
app/api/: api.py
app/controllers/: auth_controller.py  deep_interview_controller.py  health_controller.py  home_v1_controller.py  mock_interview_controller.py  portfolio_analysis_controller.py  portfolio_controller.py  portfolio_questions_controller.py  project_controller.py  projects_v1_controller.py  resume_v1_controller.py  session_controller.py  signup_controller.py  simulation_controller.py  simulation_v1_controller.py  user_settings_controller.py
app/core/: auth.py  config.py  errors.py  password.py  security.py
app/db/: session.py
app/entities/: __init__.py
app/repositories/: auth_repository.py
app/schemas/: auth.py  deep_interview.py  home.py  mock_interview.py  portfolio.py  project.py  projects_v1.py  resume_v1.py  session.py  simulation.py  simulation_v1.py  user_settings.py
app/services/: auth_service.py  deep_interview_service.py  gemini_client.py  health_service.py  home_service.py  mock_interview_service.py  portfolio_analysis_service.py  portfolio_crawl_service.py  portfolio_llm_service.py  portfolio_questions_service.py  portfolio_service.py  project_service.py  projects_v1_service.py  resume_v1_service.py  session_service.py  (+5 more)
sql/: 20260207_01_feature_schema.sql  20260207_02_user_profile_columns.sql  20260207_03_project_portfolio_meta.sql  20260207_04_rename_my_project_to_portfolio.sql  20260207_project_session_refactor.sql  login_check.sql
tests/: test_health.py
(+24 files in other folders)
